modified styles.css, index.html and app.js; added items to the tag canvas list, modifiying the resume pdf link

--- a/index.html
+++ b/index.html
@@ -48,30 +48,39 @@
             </h1>
         </div>
         <div id="myCanvasContainer">
-            <canvas width="700" height="700" id="myCanvas">
+            <canvas id="myCanvas" width="900" height="700">
                 <p>Anything in here will be replaced on browsers that support the canvas element</p>
                 <ul>
-                    <li><a href="">HTML 5</a></li>
-                    <li><a href="">CSS</a></li>
-                    <li><a href="">Javascript</a></li>
-                    <li><a href="">jQuery</a></li>
-                    <li><a href="">Firebase</a></li>
-                    <li><a href="">SQL</a></li>
-                    <li><a href="">mySQL</a></li>
-                    <li><a href="">PHP</a></li>
-                    <li><a href="">ASP.NET</a></li>
-                    <li><a href="">C#</a></li>
-                    <li><a href="">node.js</a></li>
-                    <li><a href="">Bootstrap</a></li>
-                    <li><a href="">Visio</a></li>
-                    <li><a href="">Visual Studio</a></li>
-                    <li><a href="">Office 365</a></li>
-                    <li><a href="">Powershell</a></li>
-                    <li><a href="">Git</a></li>
-                    <li><a href="">npm</a></li>
-                    <li><a href="">JSON</a></li>
-                    <li><a href="">AJAX</a></li>
-                    <li><a href="">XML</a></li>
+                    <li><a href="" class = #05ff11>HTML5</a></li>
+                    <li><a href="" class = #1621c4>CSS3</a></li>
+                    <li><a href="" class = "#05ff11">JavaScript</a></li>
+                    <li><a href="" class = "#1621c4">jQuery</a></li>
+                    <li><a href="" class = "#05ff11">Firebase</a></li>
+                    <li><a href="" class = "#1621c4">Sequelize ORM</a></li>
+                    <li><a href="" class = "#05ff11">mySQL</a></li>
+                    <li><a href="" class = "#1621c4">PHP</a></li>
+                    <li><a href="" class = "#05ff11">ASP.NET</a></li>
+                    <li><a href="" class = "#1621c4">C#</a></li>
+                    <li><a href="" class = "#05ff11">Node.js</a></li>
+                    <li><a href="" class = "#1621c4">Bootstrap</a></li>
+                    <li><a href="" class = "#05ff11">Visio</a></li>
+                    <li><a href="" class = "#1621c4">Visual Studio</a></li>
+                    <li><a href="" class = "#05ff11">Office 365</a></li>
+                    <li><a href="" class = "#1621c4">Powershell</a></li>
+                    <li><a href="" class = "#05ff11">Gitbash</a></li>
+                    <li><a href="" class = "#1621c4">JSX</a></li>
+                    <li><a href="" class = "#05ff11">JSON</a></li>
+                    <li><a href="" class = "#1621c4">AJAX</a></li>
+                    <li><a href="" class = "#05ff11">XML</a></li>
+                    <li><a href="" class = "#05ff11">MongoDB</a></li>
+                    <li><a href="" class = "#1621c4">SQL</a></li>
+                    <li><a href="" class = "#05ff11">Entity Framework</a></li>
+                    <li><a href="" class = "#1621c4">React.js</a></li>
+                    <li><a href="" class = "#05ff11">Handlebars.js</a></li>
+                    <li><a href="" class = "#1621c4">CI/CD</a></li>
+                    <li><a href="" class = "#05ff11">OOP</a></li>
+                    <li><a href="" class = "#05ff11">TDD</a></li>
+                    <li><a href="" class = "#05ff11">Express.js</a></li>
                 </ul>
             </canvas>
         </div>
@@ -82,7 +91,7 @@
             <div class="profile-img" data-aos="fade-right" data-aos-delay="300">
                 <img src="assets/images/bassy.jpg" alt="profile">
             </div>
-            <div class="about-details" data-aos="fade-left" data-aos-delay="600">
+            <div class="about-details" data-aos="fade-left" data-aos-delay="300">
                 <div class="about-heading">
                     <h1>About</h1>
                     <h6>Myself</h6>
@@ -100,17 +109,16 @@
                     <ul class="nav-list">
                         <li>
                             <a target="blank" href="#" class="icon-link">
-                                <i class="fab fa-facebook-square" data-aos="flip-up" data-aos-delay="800"></i>
+                                <i class="fab fa-facebook-square" data-aos="flip-up" data-aos-delay="300"></i>
                             </a>
                             <a target="blank" href="https://www.linkedin.com/in/kyle-cox-812757113" class="icon-link">
-                                <i class="fab fa-linkedin" data-aos="flip-up" data-aos-delay="800"></i>
+                                <i class="fab fa-linkedin" data-aos="flip-up" data-aos-delay="600"></i>
                             </a>
                             <a target="blank" href="https://github.com/kylecox213" class="icon-link">
-                                <i class="fab fa-github-square" data-aos="flip-up" data-aos-delay="800"></i>
+                                <i class="fab fa-github-square" data-aos="flip-up" data-aos-delay="900"></i>
                             </a>
-                            <a target="blank" href="https://1drv.ms/b/s!Ah7GvE7bTMpCgZw07oa8yzxpSOvVNg"
-                                class="icon-link">
-                                <i class="fa fa-file-pdf-o" data-aos="flip-up" data-aos-delay="800"></i>
+                            <a target="resume" href="assets/ITresume092019KAC.docx"></a>
+                                <i class="fa fa-file-pdf-o" data-aos="flip-up" data-aos-delay="1200"></i>
                             </a>
                         </li>
                     </ul>
@@ -168,11 +176,11 @@
             </div>
 
             <div class="portfolio-item">
-                <div class="portfolio-img img-float-left" data-aos="fade-right" data-aos-delay="300">
+                <div class="portfolio-img img-float-left" data-aos="fade-right" data-aos-delay="100">
                     <a href="https://kylecox213.github.io/Nice-Bass/">
                         <img src="assets/images/bassapp.png" alt="bass"></a>
                 </div>
-                <div class="portfolio-description description-float-right" data-aos="fade-left" data-aos-delay="300">
+                <div class="portfolio-description description-float-right" data-aos="fade-left" data-aos-delay="100">
                     <h6>Web Applications</h6>
                     <h1>Nice Bass</h1>
                     <p>
@@ -188,7 +196,7 @@
             </div>
 
             <div class="portfolio-item">
-                <div class="portfolio-description description-float-left" data-aos="fade-right" data-aos-delay="300">
+                <div class="portfolio-description description-float-left" data-aos="fade-right" data-aos-delay="100">
                     <h6>Web Applications</h6>
                     <h1>Crystal Collector</h1>
                     <p>
@@ -198,18 +206,18 @@
                     </p>
                     <a href="https://github.com/kylecox213/unit-4-game" class="cta">View Details</a>
                 </div>
-                <div class="portfolio-img img-float-right" data-aos="fade-left" data-aos-delay="300">
+                <div class="portfolio-img img-float-right" data-aos="fade-left" data-aos-delay="100">
                     <a href="https://kylecox213.github.io/unit-4-game/">
                         <img src="assets/images/crystalgame.png" alt="crystal" style="float: right"></a>
                 </div>
             </div>
 
             <div class="portfolio-item">
-                <div class="portfolio-img has-margin-right" data-aos="fade-right" data-aos-delay="300">
+                <div class="portfolio-img has-margin-right" data-aos="fade-right" data-aos-delay="100">
                     <a href="https://kylecox213.github.io/Trivia-Game/">
                         <img src="assets/images/triviagame.png" alt="trivia"></a>
                 </div>
-                <div class="portfolio-description description-float-left" data-aos="fade-left" data-aos-delay="300">
+                <div class="portfolio-description description-float-left" data-aos="fade-left" data-aos-delay="100">
                     <h6>Web Applications</h6>
                     <h1>Trivia Game</h1>
                     <p>
@@ -220,7 +228,7 @@
                 </div>
             </div>
             <div class="portfolio-item">
-                <div class="portfolio-description description-float-left" data-aos="fade-right" data-aos-delay="300">
+                <div class="portfolio-description description-float-left" data-aos="fade-right" data-aos-delay="100">
                     <h6>Web Applications</h6>
                     <h1>Nintendo Giphy</h1>
                     <p>
@@ -230,17 +238,17 @@
                     </p>
                     <a href="https://github.com/kylecox213/GIPHY-API" class="cta">View Details</a>
                 </div>
-                <div class="portfolio-img has-margin-right" data-aos="fade-left" data-aos-delay="300">
+                <div class="portfolio-img has-margin-right" data-aos="fade-left" data-aos-delay="100">
                     <a href="https://kylecox213.github.io/GIPHY-API/?">
                         <img src="assets/images/nintendoapp.png" alt="giph" style="float: right"></a>
                 </div>
             </div>
             <div class="portfolio-item">
-                <div class="portfolio-img has-margin-right" data-aos="fade-right" data-aos-delay="300">
+                <div class="portfolio-img has-margin-right" data-aos="fade-right" data-aos-delay="100">
                     <a href="https://kylecox213.github.io/Psychic-Game/">
                         <img src="assets/images/psygame (1).png" alt="psychic"></a>
                 </div>
-                <div class="portfolio-description description-float-left" data-aos="fade-left" data-aos-delay="300">
+                <div class="portfolio-description description-float-left" data-aos="fade-left" data-aos-delay="100">
                     <h6>Web Applications</h6>
                     <h1>Psychic Game</h1>
                     <p>
@@ -252,7 +260,7 @@
                 </div>
             </div>
             <div class="portfolio-item">
-                <div class="portfolio-description description-float-left" data-aos="fade-right" data-aos-delay="300">
+                <div class="portfolio-description description-float-left" data-aos="fade-right" data-aos-delay="100">
                     <h6>Web Applications</h6>
                     <h1>Guess A Number</h1>
                     <p>
@@ -262,17 +270,17 @@
                     </p>
                     <a href="https://github.com/kylecox213/Number-Guess-Game" class="cta">View Details</a>
                 </div>
-                <div class="portfolio-img has-margin-right" data-aos="fade-left" data-aos-delay="300">
+                <div class="portfolio-img has-margin-right" data-aos="fade-left" data-aos-delay="100">
                     <a href="https://kylecox213.github.io/Number-Guess-Game/">
                         <img src="assets/images/numbergame.png" alt="number" style="float: right"></a>
                 </div>
             </div>
             <div class="portfolio-item">
-                <div class="portfolio-img has-margin-right" data-aos="fade-right" data-aos-delay="300">
+                <div class="portfolio-img has-margin-right" data-aos="fade-right" data-aos-delay="100">
                     <a href="https://kylecox213.github.io/Train-Scheduler/">
                         <img src="assets/images/traingame.png" alt="train"></a>
                 </div>
-                <div class="portfolio-description" data-aos="fade-left" data-aos-delay="300">
+                <div class="portfolio-description" data-aos="fade-left" data-aos-delay="100">
                     <h6>Web Applications</h6>
                     <h1>Train Schedule Management System (TSMS)</h1>
                     <p>
@@ -291,7 +299,7 @@
             <br>
 
             <div class="portfolio-item">
-                <div class="portfolio-description has-margin-right" data-aos="fade-right" data-aos-delay="300">
+                <div class="portfolio-description has-margin-right" data-aos="fade-right" data-aos-delay="100">
                     <h6>Web Design</h6>
                     <h1>Product Layout</h1>
                     <p>
@@ -301,16 +309,16 @@
                     </p>
                     <a href="https://github.com/kylecox213/Bootstrap-Portfolio" class="cta">View Details</a>
                 </div>
-                <div class="portfolio-img has-margin-right" data-aos="fade-left" data-aos-delay="300">
+                <div class="portfolio-img has-margin-right" data-aos="fade-left" data-aos-delay="100">
                     <a href="https://kylecox213.github.io/Bootstrap-Portfolio/">
                         <img src="assets/images/bootstrap.png" alt="bootstrap" style="float: right"></a>
                 </div>
             </div>
             <div class="portfolio-item">
-                <div class="portfolio-img has-margin-right" data-aos="fade-right" data-aos-delay="300">
+                <div class="portfolio-img has-margin-right" data-aos="fade-right" data-aos-delay="100">
                     <img src="assets/images/gearscog.jpg" alt="gears">
                 </div>
-                <div class="portfolio-description" data-aos="fade-left" data-aos-delay="600">
+                <div class="portfolio-description" data-aos="fade-left" data-aos-delay="100">
                     <h6>Software Development</h6>
                     <h1>COG Systems LLC.</h1>
                     <p>
