switched the path for resume to assets/pdf/resume/; altered the resume link format

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                             <a target="blank" href="https://github.com/kylecox213" class="icon-link">
                                 <i class="fab fa-github-square" data-aos="flip-up" data-aos-delay="900"></i>
                             </a>
-                            <a target="resume" href="assets/ITresume092019KAC.docx"></a>
+                            <a target="blank" href="assets/pdf/ITresume2019Kac.pdf" class="icon-link">
                                 <i class="fa fa-file-pdf-o" data-aos="flip-up" data-aos-delay="1200"></i>
                             </a>
                         </li>
