continutation of building mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -44,43 +44,44 @@
         </nav>
         <div class="landing-text">
             <h1>Kyle Alexander Cox
-                <h6>Software Developer | Web Developer | Business Analyst</h6>
+                <h6>Full-Stack Software Developer | Web Developer | Business Analyst</h6>
             </h1>
         </div>
         <div id="myCanvasContainer">
-            <canvas id="myCanvas" width="900" height="700">
+            <canvas id="myCanvas" width="900px" height="700px">
                 <p>Anything in here will be replaced on browsers that support the canvas element</p>
                 <ul>
-                    <li><a href="" class = #05ff11>HTML5</a></li>
-                    <li><a href="" class = #1621c4>CSS3</a></li>
-                    <li><a href="" class = "#05ff11">JavaScript</a></li>
-                    <li><a href="" class = "#1621c4">jQuery</a></li>
-                    <li><a href="" class = "#05ff11">Firebase</a></li>
-                    <li><a href="" class = "#1621c4">Sequelize ORM</a></li>
-                    <li><a href="" class = "#05ff11">mySQL</a></li>
-                    <li><a href="" class = "#1621c4">PHP</a></li>
-                    <li><a href="" class = "#05ff11">ASP.NET</a></li>
-                    <li><a href="" class = "#1621c4">C#</a></li>
-                    <li><a href="" class = "#05ff11">Node.js</a></li>
-                    <li><a href="" class = "#1621c4">Bootstrap</a></li>
-                    <li><a href="" class = "#05ff11">Visio</a></li>
-                    <li><a href="" class = "#1621c4">Visual Studio</a></li>
-                    <li><a href="" class = "#05ff11">Office 365</a></li>
-                    <li><a href="" class = "#1621c4">Powershell</a></li>
-                    <li><a href="" class = "#05ff11">Gitbash</a></li>
-                    <li><a href="" class = "#1621c4">JSX</a></li>
-                    <li><a href="" class = "#05ff11">JSON</a></li>
-                    <li><a href="" class = "#1621c4">AJAX</a></li>
-                    <li><a href="" class = "#05ff11">XML</a></li>
-                    <li><a href="" class = "#05ff11">MongoDB</a></li>
-                    <li><a href="" class = "#1621c4">SQL</a></li>
-                    <li><a href="" class = "#05ff11">Entity Framework</a></li>
-                    <li><a href="" class = "#1621c4">React.js</a></li>
-                    <li><a href="" class = "#05ff11">Handlebars.js</a></li>
-                    <li><a href="" class = "#1621c4">CI/CD</a></li>
-                    <li><a href="" class = "#05ff11">OOP</a></li>
-                    <li><a href="" class = "#05ff11">TDD</a></li>
-                    <li><a href="" class = "#05ff11">Express.js</a></li>
+                    <li><a href="" class="#05ff11">HTML5</a></li>
+                    <li><a href="" class="#1621c4">CSS3</a></li>
+                    <li><a href="" class="#05ff11">JavaScript</a></li>
+                    <li><a href="" class="#1621c4">jQuery</a></li>
+                    <li><a href="" class="#05ff11">Firebase</a></li>
+                    <li><a href="" class="#1621c4">Sequelize ORM</a></li>
+                    <li><a href="" class="#05ff11">mySQL</a></li>
+                    <li><a href="" class="#1621c4">PHP</a></li>
+                    <li><a href="" class="#05ff11">ASP.NET</a></li>
+                    <li><a href="" class="#1621c4">C#</a></li>
+                    <li><a href="" class="#05ff11">Node.js</a></li>
+                    <li><a href="" class="#1621c4">Bootstrap</a></li>
+                    <li><a href="" class="#05ff11">Visio</a></li>
+                    <li><a href="" class="#1621c4">Visual Studio</a></li>
+                    <li><a href="" class="#05ff11">Office 365</a></li>
+                    <li><a href="" class="#1621c4">Powershell</a></li>
+                    <li><a href="" class="#05ff11">Gitbash</a></li>
+                    <li><a href="" class="#1621c4">JSX</a></li>
+                    <li><a href="" class="#05ff11">JSON</a></li>
+                    <li><a href="" class="#1621c4">AJAX</a></li>
+                    <li><a href="" class="#05ff11">XML</a></li>
+                    <li><a href="" class="#05ff11">MongoDB</a></li>
+                    <li><a href="" class="#1621c4">SQL</a></li>
+                    <li><a href="" class="#05ff11">Entity Framework</a></li>
+                    <li><a href="" class="#1621c4">React.js</a></li>
+                    <li><a href="" class="#05ff11">Handlebars.js</a></li>
+                    <li><a href="" class="#1621c4">CI/CD</a></li>
+                    <li><a href="" class="#05ff11">OOP</a></li>
+                    <li><a href="" class="#05ff11">TDD</a></li>
+                    <li><a href="" class="#05ff11">Express.js</a></li>
+                    <li><a href="" class="#05ff11">LINQ</a></li>
                 </ul>
             </canvas>
         </div>
@@ -97,13 +98,7 @@
                     <h6>Myself</h6>
                 </div>
                 <p>
-                    I am married and have two lovely daughters. I am a graduate from Virginia Commonwealth University. I
-                    currently
-                    am a student at the University of Richmond. I am currently employed at Logistics Solutions Group as
-                    a
-                    software developer and business analyst. My hobbies include playing the drums, fishing, traveling,
-                    reading,
-                    collecting retro-videogames, coding and computer programming.
+
                 </p>
                 <div class="social-media">
                     <ul class="nav-list">
@@ -184,12 +179,12 @@
                     <h6>Web Applications</h6>
                     <h1>Nice Bass</h1>
                     <p>
-                        Provides tournament-style bass fisherman the ability to take and upload photos of their latest
-                        catch while notifying other users of the weight and location of the catch. Users are also
-                        provided
-                        current cliamte and temperature, real-time inclement weather updates, interactive and dynamic
-                        weather
-                        radar layers, and geo-location tracking capabilities. Fish on!
+                        This application was designed to be utilized in bass fishing tournaments.
+                        This app uses multiple API's to render real-time, geo-specific weather 
+                        radar images, and current weather status. Additional features will allow 
+                        users to upload photos that will alert other users of the sender's location,
+                        track user catch data to be stored for record keeping, authentication of 
+                        user accounts.
                     </p>
                     <a href="https://github.com/kylecox213/Nice-Bass" class="cta">View Details</a>
                 </div>
