--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no">
     <title>About | Kyle Cox</title>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel=“stylesheet” href=“https://use.fontawesome.com/releases/v5.7.2/css/all.css”
-        integrity=“sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr” crossorigin=“anonymous”>
+    <link rel=“stylesheet” href=“https://use.fontawesome.com/releases/v5.7.2/css/all.css” integrity=“sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr” crossorigin=“anonymous”>
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="assets/javascript/External Libraries/tagcanvas.min.js" type="text/javascript"></script>
 
@@ -48,7 +47,7 @@
             </h1>
         </div>
         <div id="myCanvasContainer">
-            <canvas id="myCanvas" width="390px" height="700px">
+            <canvas width="700px" height="900px" id="myCanvas" style="cursor:pointer">
                 <p>Anything in here will be replaced on browsers that support the canvas element</p>
                 <ul>
                     <li><a href="" class="#05ff11">HTML5</a></li>
@@ -144,8 +143,7 @@
                     </div>
                     <h1>Software Development</h1>
                     <p>
-                        Utilizing skills to design and develop front-end and back-end programs across multiple languages
-                        and platforms
+                        Utilizing skills to design and develop front-end and back-end programs across multiple languages and platforms
                     </p>
                 </div>
                 <div class="skill" data-aos="flip-left" data-aos-delay="900">
@@ -154,9 +152,7 @@
                     </div>
                     <h1>Web Applications</h1>
                     <p>
-                        Expanding the skills to utilize a plethora of platforms and tools to design, build and implement
-                        highly
-                        dynamic web applications
+                        Expanding the skills to utilize a plethora of platforms and tools to design, build and implement highly dynamic web applications
                     </p>
                 </div>
             </div>
@@ -172,32 +168,41 @@
 
             <div class="portfolio-item">
                 <div class="portfolio-img img-float-left" data-aos="fade-right" data-aos-delay="100">
-                    <a href="https://kylecox213.github.io/Nice-Bass/">
-                        <img src="assets/images/bassapp.png" alt="bass"></a>
+                    <a href="https://dvavs-workhound.herokuapp.com/">
+                        <img src="assets/images/workhound.png" alt="hound"></a>
                 </div>
                 <div class="portfolio-description description-float-right" data-aos="fade-left" data-aos-delay="100">
                     <h6>Web Applications</h6>
-                    <h1>Nice Bass</h1>
+                    <h1>WorkHound</h1>
                     <p>
-                        This application was designed to be utilized in bass fishing tournaments.
-                        This app uses multiple API's to render real-time, geo-specific weather 
-                        radar images, and current weather status. Additional features will allow 
-                        users to upload photos that will alert other users of the sender's location,
-                        track user catch data to be stored for record keeping, authentication of 
-                        user accounts.
+                        This application was developed with tech recruiters in mind. The original concept aimed to provide a platform for recruiters to manage their own recruits, find new potential candidates from a pool of talented job-seekers registered with the app, and view
+                        the jobs for which those candidates had been put forward by other recruiters.
                     </p>
-                    <a href="https://github.com/kylecox213/Nice-Bass" class="cta">View Details</a>
+                    <a href="https://github.com/kylecox213/workHound" class="cta">View Details</a>
                 </div>
             </div>
 
+            <div class="portfolio-item">
+                <div class="portfolio-img img-float-left" data-aos="fade-right" data-aos-delay="100">
+                    <a href="https://shufflebud.herokuapp.com">
+                        <img src="assets/images/shuffleBud.png" alt="screenshot"></a>
+                </div>
+                <div class="portfolio-description description-float-right" data-aos="fade-left" data-aos-delay="100">
+                    <h1>shuffleBud</h1>
+                    <p>
+                        This application allows users to find a freind based upon compatability. The degree of compatability is determined by the total score of a questionaire that each user must complete. Each user score will be evaluated and compared with other user's scores.
+                        Users are matched with a "friend" whose score is nearest that of the user.
+                    </p>
+                    <a href="https://github.com/kylecox213/shuffleBud" class="cta">View Details</a>
+                </div>
+            </div>
+            <!-- 
             <div class="portfolio-item">
                 <div class="portfolio-description description-float-left" data-aos="fade-right" data-aos-delay="100">
                     <h6>Web Applications</h6>
                     <h1>Crystal Collector</h1>
                     <p>
-                        Four crystals! Each crystal has a value. In this game, it is up to you to figure out what they
-                        are worth.
-                        But don't let the sum of the crystal's values exceed the number above or....GAME OVER
+                        Four crystals! Each crystal has a value. In this game, it is up to you to figure out what they are worth. But don't let the sum of the crystal's values exceed the number above or....GAME OVER
                     </p>
                     <a href="https://github.com/kylecox213/unit-4-game" class="cta">View Details</a>
                 </div>
@@ -216,8 +221,7 @@
                     <h6>Web Applications</h6>
                     <h1>Trivia Game</h1>
                     <p>
-                        A Breaking Bad Trivia Game! There are ten, time-sensitive questions that are not easy to answer.
-                        Only true fanatics of the show will be able to pass.
+                        A Breaking Bad Trivia Game! There are ten, time-sensitive questions that are not easy to answer. Only true fanatics of the show will be able to pass.
                     </p>
                     <a href="https://github.com/kylecox213/Trivia-Game" class="cta">View Details</a>
                 </div>
@@ -227,9 +231,7 @@
                     <h6>Web Applications</h6>
                     <h1>Nintendo Giphy</h1>
                     <p>
-                        An application that brings the user a series of nintendo related giphs rendered on the page.
-                        Simply
-                        enter a game title and.....viola!
+                        An application that brings the user a series of nintendo related giphs rendered on the page. Simply enter a game title and.....viola!
                     </p>
                     <a href="https://github.com/kylecox213/GIPHY-API" class="cta">View Details</a>
                 </div>
@@ -247,9 +249,7 @@
                     <h6>Web Applications</h6>
                     <h1>Psychic Game</h1>
                     <p>
-                        The computer guesses a letter. You don't know what it is. In this fun game, you have ten chances
-                        to
-                        get it right. If your guesses run out....Guess What? GAMEOVER!
+                        The computer guesses a letter. You don't know what it is. In this fun game, you have ten chances to get it right. If your guesses run out....Guess What? GAMEOVER!
                     </p>
                     <a href="https://github.com/kylecox213/Psychic-Game" class="cta">View Details</a>
                 </div>
@@ -259,9 +259,7 @@
                     <h6>Web Applications</h6>
                     <h1>Guess A Number</h1>
                     <p>
-                        Guess a number! Any number! Any number between one through thirty! You have seven shots to get
-                        it in this
-                        game.
+                        Guess a number! Any number! Any number between one through thirty! You have seven shots to get it in this game.
                     </p>
                     <a href="https://github.com/kylecox213/Number-Guess-Game" class="cta">View Details</a>
                 </div>
@@ -279,13 +277,8 @@
                     <h6>Web Applications</h6>
                     <h1>Train Schedule Management System (TSMS)</h1>
                     <p>
-                        A web form application designed to manage the time schedule of each train entered into the
-                        management system.
-                        (TSMS) provides users with the ability to add a new train and set the train schedule properties.
-                        For each
-                        train entered into the system, (TSMS) is designed to update the next scheduled arrival and
-                        display
-                        the minutes remaining until the next arrival.
+                        A web form application designed to manage the time schedule of each train entered into the management system. (TSMS) provides users with the ability to add a new train and set the train schedule properties. For each train entered into the system, (TSMS)
+                        is designed to update the next scheduled arrival and display the minutes remaining until the next arrival.
                     </p>
                     <a href="https://github.com/kylecox213/Train-Scheduler" class="cta">View Details</a>
                 </div>
@@ -298,9 +291,7 @@
                     <h6>Web Design</h6>
                     <h1>Product Layout</h1>
                     <p>
-                        The initial student-portfolio webpage design. The webpage design utilized wireframing schemes
-                        and
-                        various bootstrap classes and styling properties.
+                        The initial student-portfolio webpage design. The webpage design utilized wireframing schemes and various bootstrap classes and styling properties.
                     </p>
                     <a href="https://github.com/kylecox213/Bootstrap-Portfolio" class="cta">View Details</a>
                 </div>
@@ -322,74 +313,74 @@
                     <a href="" class="cta">View Details</a>
                 </div>
             </div>
-    </section>
+    </section> -->
 
-    <section class="experience" id="experience">
-        <div class="container">
-            <div class="section-heading">
-                <h1>Work Experience</h1>
-                <h6>Past and current jobs</h6>
-            </div>
-            <div class="timeline" data-aos="fade-down" data-aos-delay="300">
-                <ul>
-                    <li class="date" data-date="Dec 18 - Present">
-                        <h1>COG Systems LLC</h1>
-                        <p>
-                            Lead Software Developer | Consultant
-                        </p>
-                    </li>
-                    <li class="date" data-date="Oct 18 - Jun 19">
-                        <h1>Logistics Solutions Group</h1>
-                        <p>
-                            Junior Software Developer | Business Analyst
-                        </p>
-                    </li>
-                    <li class="date" data-date="Jun 06 - Apr 19">
-                        <h1>Dog Den Inc.</h1>
-                        <p>
-                            General Manager
-                        </p>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </section>
+            <section class="experience" id="experience">
+                <div class="container">
+                    <div class="section-heading">
+                        <h1>Work Experience</h1>
+                        <h6>Past and current jobs</h6>
+                    </div>
+                    <div class="timeline" data-aos="fade-down" data-aos-delay="300">
+                        <ul>
+                            <li class="date" data-date="Dec 18 - Present">
+                                <h1>COG Systems LLC</h1>
+                                <p>
+                                    Software & Web Developer
+                                </p>
+                            </li>
+                            <li class="date" data-date="Oct 18 - Jun 19">
+                                <h1>Logistics Solutions Group</h1>
+                                <p>
+                                    Junior Software Developer | Business Analyst
+                                </p>
+                            </li>
+                            <!-- <li class="date" data-date="Jun 06 - Apr 19">
+                                <h1>Dog Den Inc.</h1>
+                                <p>
+                                    General Manager
+                                </p>
+                            </li> -->
+                        </ul>
+                    </div>
+                </div>
+            </section>
 
-    <section class="contact" id="contact">
-        <div class="container">
-            <div class="section-heading">
-                <h1>Contact</h1>
-                <h6>Let's work together</h6>
-            </div>
-            <form action="index.php" data-aos="fade-up" data-aos-delay="300">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" placeholder="Enter your name..." required>
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" placeholder="Enter your email..." required>
-                <label for="email">Services:</label>
-                <select name="services" id="service">
+            <section class="contact" id="contact">
+                <div class="container">
+                    <div class="section-heading">
+                        <h1>Contact</h1>
+                        <h6>Let's work together</h6>
+                    </div>
+                    <form action="index.php" data-aos="fade-up" data-aos-delay="300">
+                        <label for="name">Name:</label>
+                        <input type="text" id="name" name="name" placeholder="Enter your name..." required>
+                        <label for="email">Email:</label>
+                        <input type="email" id="email" name="email" placeholder="Enter your email..." required>
+                        <label for="email">Services:</label>
+                        <select name="services" id="service">
                     <option value="">Web Design</option>
                     <option value="">Software Development</option>
-                    <option value="">Databases</option>
+                    <option value="">Other</option>
                 </select>
-                <label for="subject">Subject:</label>
-                <textarea name="subject" id="subject" cols="10" rows="10"></textarea>
-                <input type="submit" value="Submit">
-            </form>
-        </div>
-    </section>
-    <footer class="copyright">
-        <div class="up" id="up">
-            <i class="fas fa-chevron-up"></i>
-        </div>
-        <p>&copy; 2019 Kyle Cox</p>
-    </footer>
+                        <label for="subject">Subject:</label>
+                        <textarea name="subject" id="subject" cols="10" rows="10"></textarea>
+                        <input type="submit" value="Submit">
+                    </form>
+                </div>
+            </section>
+            <footer class="copyright">
+                <div class="up" id="up">
+                    <i class="fas fa-chevron-up"></i>
+                </div>
+                <p>&copy; 2019 Kyle Cox</p>
+            </footer>
 
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://kit.fontawesome.com/5b6d4d0eea.js"></script>
-    <script src="assets/javascript/app.js"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+            <script src="https://kit.fontawesome.com/5b6d4d0eea.js"></script>
+            <script src="assets/javascript/app.js"></script>
+            <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </body>
 
 </html>
