--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                             <a target="blank" href="https://github.com/kylecox213" class="icon-link">
                                 <i class="fab fa-github-square" data-aos="flip-up" data-aos-delay="900"></i>
                             </a>
-                            <a target="blank" href="assets/pdf/ITresume2019Kac.pdf" class="icon-link">
+                            <a target="blank" href="assets/pdf/ITresume092019KACmod2.docx" class="icon-link">
                                 <i class="fa fa-file-pdf-o" data-aos="flip-up" data-aos-delay="1200"></i>
                             </a>
                         </li>
@@ -132,9 +132,9 @@
                     <div class="icon-container">
                         <i class="fas fa-layer-group"></i>
                     </div>
-                    <h1>Web Design</h1>
+                    <h1>Web Development</h1>
                     <p>
-                        Acquiring the skills to develop dynamic web pages utilizing cutting-edge tools and resources
+                        Proficient in developing dynamic web-based internet applications, electronic businesses, and various internet services
                     </p>
                 </div>
                 <div class="skill" data-aos="flip-left" data-aos-delay="600">
@@ -143,16 +143,16 @@
                     </div>
                     <h1>Software Development</h1>
                     <p>
-                        Utilizing skills to design and develop front-end and back-end programs across multiple languages and platforms
+                        Utilizing skills for conceiving, specifying, designing, programming, documenting, testing, and bug fixing for creating and maintaining applications
                     </p>
                 </div>
                 <div class="skill" data-aos="flip-left" data-aos-delay="900">
                     <div class="icon-container">
                         <i class="fas fa-chart-bar"></i>
                     </div>
-                    <h1>Web Applications</h1>
+                    <h1>Business Analysis</h1>
                     <p>
-                        Expanding the skills to utilize a plethora of platforms and tools to design, build and implement highly dynamic web applications
+                        Experienced with full-stack data mapping and work flow documentation in a test-driven agile work environment
                     </p>
                 </div>
             </div>
@@ -169,7 +169,7 @@
             <div class="portfolio-item">
                 <div class="portfolio-img img-float-left" data-aos="fade-right" data-aos-delay="100">
                     <a href="https://dvavs-workhound.herokuapp.com/">
-                        <img src="assets/images/workhound.png" alt="hound"></a>
+                        <img src="assets/images/workhound.png" alt="screenshot"></a>
                 </div>
                 <div class="portfolio-description description-float-right" data-aos="fade-left" data-aos-delay="100">
                     <h6>Web Applications</h6>
@@ -190,10 +190,25 @@
                 <div class="portfolio-description description-float-right" data-aos="fade-left" data-aos-delay="100">
                     <h1>shuffleBud</h1>
                     <p>
-                        This application allows users to find a freind based upon compatability. The degree of compatability is determined by the total score of a questionaire that each user must complete. Each user score will be evaluated and compared with other user's scores.
-                        Users are matched with a "friend" whose score is nearest that of the user.
+                        This application allows users to find a friend based upon compatability. The degree of compatability is determined by the total score derived a questionaire that each user must complete. Each user score will be evaluated and compared with other user's
+                        scores. Users are matched with a "friend" whose score is the nearest match.
                     </p>
                     <a href="https://github.com/kylecox213/shuffleBud" class="cta">View Details</a>
+                </div>
+            </div>
+
+            <div class="portfolio-item">
+                <div class="portfolio-img img-float-left" data-aos="fade-right" data-aos-delay="100">
+                    <a href="https://big-kahuna-burger1.herokuapp.com">
+                        <img src="assets/images/kahuna.png" alt="screenshot"></a>
+                </div>
+                <div class="portfolio-description description-float-right" data-aos="fade-left" data-aos-delay="100">
+                    <h1>Big Kahuna Burger</h1>
+                    <p>
+                        This application enables users to create a burger. Users will enter the name of their custom burger and click the 'create' button. The burger name will be rendered in the 'Concept Burgers' table accompanied by an 'order up' button. Clicking the 'order
+                        up' button will remove the burger from the 'Concept Burgers' table and render to the 'Signature Burgers' table.
+                    </p>
+                    <a href="https://github.com/kylecox213/bigKahunaBurger.git" class="cta">View Details</a>
                 </div>
             </div>
             <!-- 
