switched the resume.docx to resume.pdf

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                             <a target="blank" href="https://github.com/kylecox213" class="icon-link">
                                 <i class="fab fa-github-square" data-aos="flip-up" data-aos-delay="900"></i>
                             </a>
-                            <a target="blank" href="assets/pdf/ITresume092019KACmod2.docx" class="icon-link">
+                            <a target="blank" href="assets/pdf/ITresume092019KACmod2.pdf" class="icon-link">
                                 <i class="fa fa-file-pdf-o" data-aos="flip-up" data-aos-delay="1200"></i>
                             </a>
                         </li>
