added updated resume; added .gitignore to contain external libraries

--- a/index.html
+++ b/index.html
@@ -95,10 +95,12 @@
                 <div class="about-heading">
                     <h1>About</h1>
                     <h6>Myself</h6>
+                    <p>Experienced Junior Software Engineer with a demonstrated work history in the computer software industry and an academic background in software development. Skilled in full-stack development using JavaScript, Node.js, React.js, MongoDB,
+                        MySql, and Express. Proficient experience with OOP using .NET framework, C#, and SQL. Bachelor's Degree obtained from Virginia Commonwealth University and Continuing Studies Coding Bootcamp Full-stack computer programming certification
+                        from University of Richmond.
+                    </p>
                 </div>
-                <p>
 
-                </p>
                 <div class="social-media">
                     <ul class="nav-list">
                         <li>
@@ -111,7 +113,7 @@
                             <a target="blank" href="https://github.com/kylecox213" class="icon-link">
                                 <i class="fab fa-github-square" data-aos="flip-up" data-aos-delay="900"></i>
                             </a>
-                            <a target="blank" href="assets/pdf/ITresume092019KACmod2.pdf" class="icon-link">
+                            <a target="blank" href="assets/pdf/ITresume092019KACmod3.pdf" class="icon-link">
                                 <i class="fa fa-file-pdf-o" data-aos="flip-up" data-aos-delay="1200"></i>
                             </a>
                         </li>
