added automate to portfolio

--- a/index.html
+++ b/index.html
@@ -72,15 +72,19 @@
                     <li><a href="" class="#1621c4">AJAX</a></li>
                     <li><a href="" class="#05ff11">XML</a></li>
                     <li><a href="" class="#05ff11">MongoDB</a></li>
-                    <li><a href="" class="#1621c4">SQL</a></li>
+                    <li><a href="" class="#1621c4">MERN</a></li>
                     <li><a href="" class="#05ff11">Entity Framework</a></li>
-                    <li><a href="" class="#1621c4">React.js</a></li>
+                    <li><a href="" class="#1621c4">React</a></li>
                     <li><a href="" class="#05ff11">Handlebars.js</a></li>
                     <li><a href="" class="#1621c4">CI/CD</a></li>
                     <li><a href="" class="#05ff11">OOP</a></li>
                     <li><a href="" class="#05ff11">TDD</a></li>
                     <li><a href="" class="#05ff11">Express.js</a></li>
                     <li><a href="" class="#05ff11">LINQ</a></li>
+                    <li><a href="" class="#05ff11">RESTful API</a></li>
+                    <li><a href="" class="#05ff11">Electron</a></li>
+                    <li><a href="" class="#05ff11">SQLite</a></li>
+                    <li><a href="" class="#05ff11">SQL Server</a></li>
                 </ul>
             </canvas>
         </div>
@@ -169,11 +173,28 @@
             </div>
 
             <div class="portfolio-item">
-                <div class="portfolio-img img-float-left" data-aos="fade-right" data-aos-delay="100">
+                <div class="portfolio-img img-float-left" data-aos="fade-right" data-aos-delay="300">
+                    <a href="https://dvavs-automate.herokuapp.com">
+                        <img src="assets/images/automate.png" alt="screenshot"></a>
+                </div>
+                <div class="portfolio-description description-float-right" data-aos="fade-left" data-aos-delay="300">
+                    <h6>Web Applications</h6>
+                    <h1>AutoMate</h1>
+                    <p>
+                        A full-stack CRUD application; more specifically, a digital customer data management system,
+                        currently deployed at a local business in the Richmond Area. AutoMate utilizes React, Node,
+                        Express, SQLite, Sequelize, JavaScript, Passport, BCrypt, Electron and Heroku
+                    </p>
+                    <a href="https://github.com/kylecox213/AutoMate" class="cta">View Details</a>
+                </div>
+            </div>
+
+            <div class="portfolio-item">
+                <div class="portfolio-img img-float-left" data-aos="fade-right" data-aos-delay="500">
                     <a href="https://dvavs-workhound.herokuapp.com/">
                         <img src="assets/images/workhound.png" alt="screenshot"></a>
                 </div>
-                <div class="portfolio-description description-float-right" data-aos="fade-left" data-aos-delay="100">
+                <div class="portfolio-description description-float-right" data-aos="fade-left" data-aos-delay="500">
                     <h6>Web Applications</h6>
                     <h1>WorkHound</h1>
                     <p>
@@ -185,11 +206,11 @@
             </div>
 
             <div class="portfolio-item">
-                <div class="portfolio-img img-float-left" data-aos="fade-right" data-aos-delay="100">
+                <div class="portfolio-img img-float-left" data-aos="fade-right" data-aos-delay="700">
                     <a href="https://shufflebud.herokuapp.com">
                         <img src="assets/images/shuffleBud.png" alt="screenshot"></a>
                 </div>
-                <div class="portfolio-description description-float-right" data-aos="fade-left" data-aos-delay="100">
+                <div class="portfolio-description description-float-right" data-aos="fade-left" data-aos-delay="700">
                     <h1>shuffleBud</h1>
                     <p>
                         This application allows users to find a friend based upon compatability. The degree of compatability is determined by the total score derived a questionaire that each user must complete. Each user score will be evaluated and compared with other user's
@@ -200,11 +221,11 @@
             </div>
 
             <div class="portfolio-item">
-                <div class="portfolio-img img-float-left" data-aos="fade-right" data-aos-delay="100">
+                <div class="portfolio-img img-float-left" data-aos="fade-right" data-aos-delay="900">
                     <a href="https://big-kahuna-burger1.herokuapp.com">
                         <img src="assets/images/kahuna.png" alt="screenshot"></a>
                 </div>
-                <div class="portfolio-description description-float-right" data-aos="fade-left" data-aos-delay="100">
+                <div class="portfolio-description description-float-right" data-aos="fade-left" data-aos-delay="900">
                     <h1>Big Kahuna Burger</h1>
                     <p>
                         This application enables users to create a burger. Users will enter the name of their custom burger and click the 'create' button. The burger name will be rendered in the 'Concept Burgers' table accompanied by an 'order up' button. Clicking the 'order
