--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
     </section>
 
     <section class="contact" id="contact">
-        <div class="container">
+        <div class="container" style="height: 620px;">
             <div class="section-heading">
                 <h1>Contact</h1>
                 <h6>Let's work together</h6>
