added list items to canvas

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <li><a href="" class="#1621c4">Sequelize ORM</a></li>
                     <li><a href="" class="#05ff11">mySQL</a></li>
                     <li><a href="" class="#1621c4">PHP</a></li>
-                    <li><a href="" class="#05ff11">ASP.NET</a></li>
+                    <li><a href="" class="#05ff11">ASP.NET Core</a></li>
                     <li><a href="" class="#1621c4">C#</a></li>
                     <li><a href="" class="#05ff11">Node.js</a></li>
                     <li><a href="" class="#1621c4">Bootstrap</a></li>
@@ -73,7 +73,7 @@
                     <li><a href="" class="#05ff11">XML</a></li>
                     <li><a href="" class="#05ff11">MongoDB</a></li>
                     <li><a href="" class="#1621c4">MERN</a></li>
-                    <li><a href="" class="#05ff11">Entity Framework</a></li>
+                    <li><a href="" class="#05ff11">Entity Framework Core</a></li>
                     <li><a href="" class="#1621c4">React</a></li>
                     <li><a href="" class="#05ff11">Handlebars.js</a></li>
                     <li><a href="" class="#1621c4">CI/CD</a></li>
@@ -84,7 +84,17 @@
                     <li><a href="" class="#05ff11">RESTful API</a></li>
                     <li><a href="" class="#05ff11">Electron</a></li>
                     <li><a href="" class="#05ff11">SQLite</a></li>
-                    <li><a href="" class="#05ff11">SQL Server</a></li>
+                    <li><a href="" class="#05ff11">Microsoft SQL Server</a></li>
+                    <li><a href="" class="#05ff11">MVC Design</a></li>
+                    <li><a href="" class="#05ff11">PostgreSQL</a></li>
+                    <li><a href="" class="#05ff11">AWS</a></li>
+                    <li><a href="" class="#05ff11">Mongoose ORM</a></li>
+                    <li><a href="" class="#05ff11"></a></li>
+
+
+
+
+
                 </ul>
             </canvas>
         </div>
