edits to font awesome icons; added new resume and updated link

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <li><a href="" class="#05ff11">PostgreSQL</a></li>
                     <li><a href="" class="#05ff11">AWS</a></li>
                     <li><a href="" class="#05ff11">Mongoose ORM</a></li>
-                    <li><a href="" class="#05ff11"></a></li>
+                    <li><a href="" class="#05ff11">Heroku</a></li>
 
 
 
@@ -119,16 +119,16 @@
                     <ul class="nav-list">
                         <li>
                             <a target="blank" href="#" class="icon-link">
-                                <i class="fab fa-facebook-square" data-aos="flip-up" data-aos-delay="300"></i>
+                                <i class="fab fa-facebook-square" data-aos="flip-up" data-aos-delay="400"></i>
                             </a>
                             <a target="blank" href="https://www.linkedin.com/in/kyle-cox-812757113" class="icon-link">
                                 <i class="fab fa-linkedin" data-aos="flip-up" data-aos-delay="600"></i>
                             </a>
                             <a target="blank" href="https://github.com/kylecox213" class="icon-link">
-                                <i class="fab fa-github-square" data-aos="flip-up" data-aos-delay="900"></i>
+                                <i class="fab fa-github-square" data-aos="flip-up" data-aos-delay="800"></i>
                             </a>
-                            <a target="blank" href="assets/pdf/ITresume092019KACmod3.pdf" class="icon-link">
-                                <i class="fa fa-file-pdf-o" data-aos="flip-up" data-aos-delay="1200"></i>
+                            <a target="blank" href="assets/pdf/ITres092019KACv4.pdf" class="icon-link">
+                                <i class="fa fa-file-pdf-o" data-aos="flip-up" data-aos-delay="1000"></i>
                             </a>
                         </li>
                     </ul>
