--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
                     <li><a href="" class="#05ff11">XML</a></li>
                     <li><a href="" class="#05ff11">MongoDB</a></li>
                     <li><a href="" class="#1621c4">MERN</a></li>
-                    <li><a href="" class="#05ff11">Entity Framework Core</a></li>
+                    <li><a href="" class="#05ff11">Entity Framework</a></li>
                     <li><a href="" class="#1621c4">React</a></li>
                     <li><a href="" class="#05ff11">Handlebars.js</a></li>
                     <li><a href="" class="#1621c4">CI/CD</a></li>
                     <li><a href="" class="#05ff11">OOP</a></li>
                     <li><a href="" class="#05ff11">TDD</a></li>
-                    <li><a href="" class="#05ff11">Express.js</a></li>
+                    <li><a href="" class="#05ff11">Express</a></li>
                     <li><a href="" class="#05ff11">LINQ</a></li>
                     <li><a href="" class="#05ff11">RESTful API</a></li>
                     <li><a href="" class="#05ff11">Electron</a></li>
@@ -90,6 +90,26 @@
                     <li><a href="" class="#05ff11">AWS</a></li>
                     <li><a href="" class="#05ff11">Mongoose ORM</a></li>
                     <li><a href="" class="#05ff11">Heroku</a></li>
+                    <li><a href="" class="#05ff11">Angular</a></li>
+                    <li><a href="" class="#05ff11">Typescript</a></li>
+                    <li><a href="" class="#05ff11">C++</a></li>
+                    <li><a href="" class="#05ff11">Microsoft Azure</a></li>
+                    <li><a href="" class="#05ff11">VB.NET</a></li>
+                    <li><a href="" class="#05ff11">Mongoose ODM</a></li>
+                    <li><a href="" class="#05ff11">Grunt</a></li>
+                    <li><a href="" class="#05ff11">.NET Framework</a></li>
+                    <li><a href="" class="#05ff11">Atom</a></li>
+                    <li><a href="" class="#05ff11">Bit Bucket</a></li>
+                    <li><a href="" class="#05ff11">Git</a></li>
+                    <li><a href="" class="#05ff11">Unity</a></li>
+
+
+
+
+
+
+
+
 
 
 
