edited skill set word cloud

--- a/index.html
+++ b/index.html
@@ -102,6 +102,15 @@
                     <li><a href="" class="#05ff11">Bit Bucket</a></li>
                     <li><a href="" class="#05ff11">Git</a></li>
                     <li><a href="" class="#05ff11">Unity</a></li>
+                    <li><a href="" class="#05ff11">Data Structures</a></li>
+                    <li><a href="" class="#05ff11">Unit Testing</a></li>
+                    <li><a href="" class="#05ff11">NPM</a></li>
+                    <li><a href="" class="#05ff11">Git</a></li>
+                    <li><a href="" class="#05ff11">MSI</a></li>
+
+
+
+
 
 
 
