edits to skill set word cloud

--- a/index.html
+++ b/index.html
@@ -107,6 +107,23 @@
                     <li><a href="" class="#05ff11">NPM</a></li>
                     <li><a href="" class="#05ff11">Git</a></li>
                     <li><a href="" class="#05ff11">MSI</a></li>
+                    <li><a href="" class="#05ff11">Team Foundation Server</a></li>
+                    <li><a href="" class="#05ff11">Microsoft Test Manager</a></li>
+                    <li><a href="" class="#05ff11">Sharepoint</a></li>
+                    <li><a href="" class="#05ff11">Postman</a></li>
+                    <li><a href="" class="#05ff11">BCrypt</a></li>
+                    <li><a href="" class="#05ff11">Passport</a></li>
+                    <li><a href="" class="#05ff11">D3</a></li>
+                    <li><a href="" class="#05ff11">Visual Studio Code</a></li>
+                    <li><a href="" class="#05ff11">QT</a></li>
+
+
+
+
+
+
+
+
 
 
 
