--- a/index.html
+++ b/index.html
@@ -88,14 +88,14 @@
                     <li><a href="" class="#05ff11">MVC Design</a></li>
                     <li><a href="" class="#05ff11">PostgreSQL</a></li>
                     <li><a href="" class="#05ff11">AWS</a></li>
-                    <li><a href="" class="#05ff11">Mongoose ORM</a></li>
+                    <li><a href="" class="#05ff11">Mongoose ODM</a></li>
                     <li><a href="" class="#05ff11">Heroku</a></li>
                     <li><a href="" class="#05ff11">Angular</a></li>
                     <li><a href="" class="#05ff11">Typescript</a></li>
                     <li><a href="" class="#05ff11">C++</a></li>
                     <li><a href="" class="#05ff11">Microsoft Azure</a></li>
                     <li><a href="" class="#05ff11">VB.NET</a></li>
-                    <li><a href="" class="#05ff11">Mongoose ODM</a></li>
+                    <li><a href="" class="#05ff11"></a></li>
                     <li><a href="" class="#05ff11">Grunt</a></li>
                     <li><a href="" class="#05ff11">.NET Framework</a></li>
                     <li><a href="" class="#05ff11">Atom</a></li>
@@ -116,6 +116,10 @@
                     <li><a href="" class="#05ff11">D3</a></li>
                     <li><a href="" class="#05ff11">Visual Studio Code</a></li>
                     <li><a href="" class="#05ff11">QT</a></li>
+                    <li><a href="" class="#05ff11">Telerik</a></li>
+                    <li><a href="" class="#05ff11">Razor Pages</a></li>
+
+
 
 
 
