edits to word cloud

--- a/index.html
+++ b/index.html
@@ -118,6 +118,8 @@
                     <li><a href="" class="#05ff11">QT</a></li>
                     <li><a href="" class="#05ff11">Telerik</a></li>
                     <li><a href="" class="#05ff11">Razor Pages</a></li>
+                    <li><a href="" class="#05ff11">NGiNX</a></li>
+
 
 
 
