added screen shot of the navbar dropdown menu

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no">
-    <title>About | Kyle Cox</title>
+    <title>Professional Portfolio | Kyle Cox</title>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel=“stylesheet” href=“https://use.fontawesome.com/releases/v5.7.2/css/all.css” integrity=“sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr” crossorigin=“anonymous”>
     <link rel="stylesheet" href="assets/css/style.css">
@@ -211,7 +211,7 @@
                     </div>
                     <h1>Software Development</h1>
                     <p>
-                        Utilizing skills for conceiving, specifying, designing, programming, documenting, testing, and bug fixing for creating and maintaining applications
+                        Utilizing skills for conceigotving, specifying, designing, programming, documenting, testing, and bug fixing for creating and maintaining applications
                     </p>
                 </div>
                 <div class="skill" data-aos="flip-left" data-aos-delay="900">
