edit photo path

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </nav>
         <div class="landing-text">
             <h1>Kyle Alexander Cox
-                <h6>Full-Stack Software Developer | Web Developer | Business Analyst</h6>
+                <h6>Software Engineer | Full-Stack Software Developer</h6>
             </h1>
         </div>
         <div id="myCanvasContainer">
